--- a/style.css
+++ b/style.css
@@ -6,9 +6,26 @@
   margin-top: 9vw;
 }
 
+.jumbotron {
+  margin-bottom: 0 !important;
+}
+
+#video {
+  margin-bottom: 4rem;
+}
+
 .pricingPanel {
-  /* margin-top: 1em; */
   margin-bottom: 1em;
-  /* padding-left: 0;
-  padding-right: 0; */
+}
+
+.lead {
+  margin-bottom: 0 !important;
+}
+
+.buyItem {
+  margin-bottom: 1rem;
+}
+
+.price {
+  margin-top: 1rem;
 }
